Fix Footer Alignment in All Cases.

--- a/colors.css
+++ b/colors.css
@@ -1,7 +1,3 @@
-.color-holder {
-    float: left;
-}
-
 .color-box {
     display: inline-block;
     cursor: pointer;
@@ -28,6 +24,21 @@
     bottom: 30px;
 }
 
+.color-section {
+    padding: 5px 200px;
+    justify-content: left;
+}
+
+.color-section p {
+    text-align: left;
+    font-size: 18px;
+}
+
+.color-section h2 {
+    text-align: left;
+    font-size: 28px;
+}
+
 #snackbar.show {
     visibility: visible;
     animation: fadein 0.5s, fadeout 0.5s 2.5s;
@@ -41,4 +52,16 @@
 @keyframes fadeout {
     from {bottom: 30px; opacity: 1;} 
     to {bottom: 0; opacity: 0;}
+}
+
+@media (max-width: 1200px) {
+    .other-section {
+        padding: 5px 50px;
+    }
+}
+
+@media (max-width: 700px) {
+    .other-section {
+        padding: 5px 0px;
+    }
 }
